--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Olá Mundo! </h1>
-</body>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meu Blog!</title>
+    </head>
+    <body>
+        <h1> Personagens favoritos de HQs! </h1>
+        <input type="text">
+        <button> Pesquisar </button>
+        <br>
+        <br>
+        <hr>
+        <h2> Personagens DC! </h2>
+        <p> Personagens favoritos. </p>
+        <ul>
+        <li> Zatanna Zatara </li>
+         <li>Hera Venenosa </li>
+         <li>Jhon Constantine</li>
+        </ul>
+        <img src="img/zatanna.jpg" alt="Zatanna Icons " width="250px"> <img src="img/ivy.png" alt="Hera Venenosa icons" width=""> <img src="img/Jhon Constantine.png" alt="Jhon Constantine Icons" width="250px">
+        <br>
+        <br>
+        <hr>
+        <h2>Personagens Marvel!</h2>
+        <p>Personagens favoritos</p>
+        <ul>
+            <li> Feiticeira Escarlate</li>
+            <li> Homem Gelo </li>
+            <li>Doutor Estranho</li>
+        </ul>
+        <br>
+        <img src="img/scarllet witch.jpg" alt="Feiticeira Escarlate icons" width="255px"> <img src="img/homem gelo.png " alt="Homem gelo icons Hqs" width="280px"> <img src="img/doctor strange.png" alt="Doutor Estranho" width="255px">
+        <br>
+        <br>
+        <hr>
+       <h2>Meu top 3</h2>
+        <ol> <li> Zatanna Zatara</li>
+        <li> Hera Venenosa </li>
+        <li>Feiticeira Escarlate</li>
+        </ol>
+        <br>
+        <br>
+        <hr>
+        <h2>Conheça os personagens</h2>
+        <p>Clique nas imagens.</p>
+        <a href="https://dc.fandom.com/pt-br/wiki/Zatanna_Zatara_(Terra_Primal)" target="_blank"> <img src="img/zatanna.jpg" alt="Zatanna Icons " width="250px"> </a> 
+        <a href="https://batman.fandom.com/pt-br/wiki/Hera_Venenosa_(Pamela_Isley)" target="_blank"> <img src="img/ivy.png" alt="Hera Venenosa icons" width=""> </a>
+        <a href="https://xmen-comics.fandom.com/pt-br/wiki/Feiticeira_Escarlate_(Wanda_Maximoff)_(Terra-616)" target="_blank"> <img src="img/scarllet witch.jpg" alt="Feiticeira Escarlate icons" width="255px"> </a>
+        <br>
+        <br>
+        <hr>
+        <h2>Sites para leitura</h2>
+        <ul> <li> HQs DC</li></ul>
+        <a href="https://ds-club.net/ " target="_blank"> <button>Vá ao site</button> </a>
+        <ul> <li> HQs Marvel </li></ul>
+        <a href="https://leitoresdehqs.wordpress.com/hqs-para-ler/" target="_blank "> <button> Vá ao site </button> </a>
+        
+
+    </body>
 </html>
