--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button> Pesquisar </button>
         <br>
         <br>
-        <hr>
+        <hr size="5px" color="black">
         <h2> Personagens DC! </h2>
         <p> Personagens favoritos. </p>
         <ul style="list-style: none;"> 
@@ -25,7 +25,7 @@
         <img src="img/zatanna.jpg" alt="Zatanna Icons " width="250px"> <img src="img/ivy.png" alt="Hera Venenosa icons" width=""> <img src="img/Jhon Constantine.png" alt="Jhon Constantine Icons" width="250px">
         <br>
         <br>
-        <hr>
+        <hr size="5px" color="black">
         <h2>Personagens Marvel!</h2>
         <p>Personagens favoritos</p>
         <ul style="list-style: none;">
@@ -38,7 +38,7 @@
         <img src="img/scarllet witch.jpg" alt="Feiticeira Escarlate icons" width="255px"> <img src="img/homem gelo.png " alt="Homem gelo icons Hqs" width="280px"> <img src="img/doctor strange.png" alt="Doutor Estranho" width="255px">
         <br>
         <br>
-        <hr>
+        <hr size="5px" color="black">
        <h2>Meu top 3</h2>
         <ol> <li> Zatanna Zatara</li>
         <li> Hera Venenosa </li>
@@ -46,7 +46,7 @@
         </ol>
         <br>
         <br>
-        <hr>
+        <hr size="5px" color="black">
         <h2>Conheça os personagens</h2>
         <p>Clique nas imagens.</p>
         <a href="https://dc.fandom.com/pt-br/wiki/Zatanna_Zatara_(Terra_Primal)" target="_blank"> <img src="img/zatanna.jpg" alt="Zatanna Icons " width="250px"> </a> 
@@ -54,7 +54,7 @@
         <a href="https://xmen-comics.fandom.com/pt-br/wiki/Feiticeira_Escarlate_(Wanda_Maximoff)_(Terra-616)" target="_blank"> <img src="img/scarllet witch.jpg" alt="Feiticeira Escarlate icons" width="250px"> </a>
         <br>
         <br>
-        <hr>
+        <hr size="5px" color="black">
         <h2>Sites para leitura</h2>
         <ul> <li> HQs DC</li></ul>
         <a href="https://ds-club.net/ " target="_blank"> <button>Vá ao site</button> </a>
